[tool.poetry]
name = "continualtrain"
version = "0.0.0"
description = "Train CL models in a Docker container"
authors = ["Nishant S. Aswani <nishantaswani@nyu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "continualTrain"}]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
toml = { version = "*"}

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.torch.dependencies]
torch = {version = "2.0.0", source = "torch"}
torchvision = {version = "0.15.1", source = "torch"}
torchaudio = {version = "2.0.1", source = "torch"}

[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
pylint = { version = "*"}
GPUtil = { version = "*"}
pluggy = { version = "*"}
shortuuid = { version = "*"}
natsort = { version = "*"}
continualUtils = { git = "https://github.com/niniack/continualUtils.git", branch = "dev"}

# [tool.poetry.extras]
# docker = ["torch", "torchvision", "avalanche-lib", "pylint", "gputil", "pluggy", "shortuuid", "natsort", "continualUtils"]

[tool.poetry.scripts]
continual_train = "continualTrain.api.train:main"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"