[tool.poetry]
name = "continual_train"
version = "0.0.0"
description = "Train CL models in a Docker container"
authors = ["Nishant S. Aswani <nishantaswani@nyu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "continualTrain"}]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
toml = { version = "*"}
requests = { version = "*"}
spython = { version = "*"}
typer = {version = "*", extras = ["all"]}

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.torch.dependencies]
torch = {version = ">=2.1.0", source = "torch", markers = "sys_platform == 'linux'"}
torchvision = {version = "*", source = "torch", markers = "sys_platform == 'linux'"}
numpy = {version = "*"}
ffcv = {version = "*"}
cupy-cuda11x = {version = "*"}
numba = {version = "*"}
tbb = {version = "*"}

[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
pylint = { version = "*"}
GPUtil = { version = "*"}
pluggy = { version = "*"}
shortuuid = { version = "*"}
natsort = { version = "*"}
protobuf = { version = "3.20.*"}
continualUtils = { git = "https://github.com/niniack/continualUtils.git", branch = "dev"}
avalanche-lib = { git = "https://github.com/ContinualAI/avalanche", rev = "12f37f8"}
cupy-cuda11x = { version = "*"}
numba = { version = "*"}
tbb = { version = "*"}

[tool.poetry.scripts]
barracks = "continualTrain.api.entry:app"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"